# cs599-project

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  start.bat  start.ps1
MCP_Visual/: README.md  pyproject.toml
MCP_Visual/examples/: audio_transcribe.json  vision_analyze.json
MCP_Visual/src/multimodal_mcp/: __init__.py  __main__.py  cli.py  config.py  errors.py  http_app.py  server.py
MCP_Visual/src/multimodal_mcp/media/: __init__.py  resolver.py
MCP_Visual/src/multimodal_mcp/providers/: __init__.py  openai_provider.py
MCP_Visual/tests/: test_http_app.py  test_media_resolver.py  test_provider.py  test_server.py
backend/: package-lock.json  package.json  requirements.txt
backend/app/: __init__.py  main.py
backend/app/agents/: __init__.py  adaptive.py  classifier.py  graph.py  router.py
backend/app/api/: deps.py
backend/app/core/: auth.py  config.py  exceptions.py  security.py
backend/app/db/: database.py  models.py
backend/app/schemas/: auth.py  library.py  research.py
backend/app/services/: llm_service.py  multimodal_service.py  pdf_service.py  search_service.py  vector_service.py
backend/app/tasks/: __init__.py  manager.py
backend/prisma/: __init__.py  schema.prisma
backend/tests/: conftest.py
backend/tests/unit/: test_adaptive.py  test_classifier.py  test_executor.py  test_multimodal_integration.py  test_nodes.py  test_registry.py  test_security.py  (+2 more)
docs/: CS599_大作业报告.md  architecture.md
frontend/: package-lock.json  package.json  tailwind.config.ts
tools/: generate_cs599_report_pdf.py  generate_project_ppt.js
(+57 files in other folders)
